<resources>
    <string name="app_name">WDS</string>
    <string name="team">Wildlife Deterrence System</string>
    <string name="nav_verify">Verify</string>
    <string name="nav_log">Log</string>
    <string name="nav_choose">Choose</string>
    <string name="title_verify">Verify Deterrences</string>
    <string name="title_log">Deterrence Log</string>
    <string name="title_choose">Choose Animals to Deter</string>
    <string name="desc_deer">Deer Button</string>
    <string name="desc_elk">Elk Button</string>
    <string name="desc_bear">Bear Button</string>
    <string name="desc_eagle">Eagle Button</string>
    <string name="desc_wolf">Wolf Button</string>
    <string name="desc_opossum">Opossum Button</string>
    <string name="desc_raccoon">Raccoon Button</string>
    <string name="desc_rabbit">Rabbit Button</string>
    <string name="desc_squirrel">Squirrel Button</string>
    <string name="desc_cat">Cat Button</string>
    <string name="desc_snake">Snake Button</string>
    <string name="desc_cow">Cow Button</string>
    <string name="desc_sheep">Sheep Button</string>
    <string name="desc_horse">Horse Button</string>
    <string name="desc_chicken">Chicken Button</string>
    <string name="desc_reject">Reject Button</string>
    <string name="desc_undo">Undo Button</string>
    <string name="desc_accept">Accept Button</string>
    <string name="desc_info">Information Dialog Button</string>
    <string name="desc_logout">Logout Button</string>
    <string name="msg_verification_done">Verification complete!\nCheck back later for more</string>
    <string name="msg_disconnected">No network connection! Restore connection to view deterred animals.</string>
    <string name="info_verify_title">Welcome to the verification screen!</string>
    <string name="info_log_title">Welcome to the deterrence log!</string>
    <string name="info_choose_title">Welcome to the choosing screen!</string>
    <string name="info_verify">Swipe the cards you see or use the buttons below to accept or deny the deterrence attempts to verify the accuracy of the machine learning. If you make a mistake, you may use the button in the center to undo a decision. The decisions will be committed once the screen is changed or app is closed.</string>
    <string name="info_log">This screen presents a list of all past accepted deterrences, in chronological order with the newest added instances at the top of the list. The list is automatically updated after instances have been verified on the Verify Screen</string>
    <string name="info_choose">Tap to expand one of the headers labeled Forest, Urban, or Rural to choose the mode of operation. Then pick from the respective list of five animals to select what to deter with WDS.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_user">Create User</string>
    <string name="forest">Forest</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
</resources>