<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/caramel_lite"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="@drawable/gradation_black"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/urban"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/titleForest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forest"
            android:textColor="@color/maroon_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/forestBtns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:el_duration="1000"
            app:el_expanded="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleForest">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/f1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_deer"
                    android:scaleType="fitCenter"
                    android:src="@drawable/deer_selector" />

                <ImageButton
                    android:id="@+id/f2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_elk"
                    android:scaleType="fitCenter"
                    android:src="@drawable/elk_selector" />

                <ImageButton
                    android:id="@+id/f3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_bear"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bear_selector" />

                <ImageButton
                    android:id="@+id/f4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_eagle"
                    android:scaleType="fitCenter"
                    android:src="@drawable/eagle_selector" />

                <ImageButton
                    android:id="@+id/f5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_wolf"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wolf_selector" />
            </LinearLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/urban"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="@drawable/gradation_black"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/rural"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forest">

        <TextView
            android:id="@+id/titleUrban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urban"
            android:textColor="@color/maroon_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/urbanBtns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:el_duration="1000"
            app:el_expanded="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleUrban">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/u1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_opossum"
                    android:scaleType="fitCenter"
                    android:src="@drawable/opossum_selector" />

                <ImageButton
                    android:id="@+id/u2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_raccoon"
                    android:scaleType="fitCenter"
                    android:src="@drawable/raccoon_selector" />

                <ImageButton
                    android:id="@+id/u3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_rabbit"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rabbit_selector" />

                <ImageButton
                    android:id="@+id/u4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_squirrel"
                    android:scaleType="fitCenter"
                    android:src="@drawable/squirrel_selector" />

                <ImageButton
                    android:id="@+id/u5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_cat"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cat_selector" />
            </LinearLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rural"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="@drawable/gradation_black"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urban">

        <TextView
            android:id="@+id/titleRural"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rural"
            android:textColor="@color/maroon_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/ruralBtns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:el_duration="1000"
            app:el_expanded="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleRural">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/r1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_snake"
                    android:scaleType="fitCenter"
                    android:src="@drawable/snake_selector" />

                <ImageButton
                    android:id="@+id/r2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_cow"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cow_selector" />

                <ImageButton
                    android:id="@+id/r3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_sheep"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sheep_selector" />

                <ImageButton
                    android:id="@+id/r4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_horse"
                    android:scaleType="fitCenter"
                    android:src="@drawable/horse_selector" />

                <ImageButton
                    android:id="@+id/r5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maroon_main"
                    android:contentDescription="@string/desc_chicken"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chicken_selector" />
            </LinearLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>