<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/msg_verification_done"
        android:textAlignment="center"
        android:textSize="30sp" />

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:minHeight="300dp"
        android:padding="8dp"
        tools:listitem="@layout/verify_item" />

    <RelativeLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rejectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/undoBtn"
            android:contentDescription="@string/desc_reject"
            android:src="@drawable/ic_x_24"
            app:backgroundTint="@android:color/holo_red_light"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/undoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/desc_undo"
            android:src="@drawable/ic_undo_24"
            app:backgroundTint="@android:color/holo_blue_light"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/undoBtn"
            android:contentDescription="@string/desc_accept"
            android:src="@drawable/ic_check_24"
            app:backgroundTint="@android:color/holo_green_light" />

    </RelativeLayout>
</RelativeLayout>